--- a/demoSparkSQLPython.ipynb
+++ b/demoSparkSQLPython.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Getting started with Spark: demo with Spark SQL in Python\n",
+    "# Getting started with Spark: demo with Spark SQL in Python\n"
    ]
   },
   {
