--- a/demoSparkSQLPython.ipynb
+++ b/demoSparkSQLPython.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,21 +38,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read the file into a Spark [_dataframe_](https://spark.apache.org/docs/latest/sql-programming-guide.html#datasets-and-dataframes)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = spark.read \\\n",
     "          .load(\"/data/FME_BaumdatenBearbeitet_OGD_20190205.csv\",\n",
-    "           format=\"csv\", sep=\";\",  header=\"true\", encoding=\"iso-8859-1\")"
+    "           format=\"csv\", sep=\";\", header=\"true\", encoding=\"iso-8859-1\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note:** if you want to upload your own CSV file `myFile.csv` you need to first upload it to HDFS like this:\n",
+    "**Note:** The directory `/data` resides on the Hadoop distributed filesystem. If you want to upload your own CSV file `myFile.csv` you need to first upload it to HDFS like this:\n",
     "<code>\n",
     "    hdfs dfs -put myFile.csv myFile.csv\n",
     "</code>\n",
@@ -68,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +220,7 @@
        "2  48,3179178510249  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -334,6 +341,22 @@
    "metadata": {},
    "source": [
     "The height data doesn't seem to be up-to-date."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note:** After you're done, it's important to close the Spark session in order to release cluster resources."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.stop()"
    ]
   }
  ],
