markdown for pictures

--- a/mapreduce_with_bash.ipynb
+++ b/mapreduce_with_bash.ipynb
@@ -42,12 +42,20 @@
     "\n",
     "MapReduce is a computing paradigm designed to allow parallel distributed processing of massive amounts of data.\n",
     "\n",
-    "Data is split across several computer nodes, there it is processed by one or more mappers. The results emitted by the mappers are first sorted and then passed to one or more reducers that process and combine the data to return the final result.\n",
-    "\n",
-    "<center>\n",
-    "<img style=\"\" src=\"mapreduce.svg\" alt=\"Mapreduce map + reduce\" width=\"80%\">\n",
-    "</center>\n",
-    "\n",
+    "Data is split across several computer nodes, there it is processed by one or more mappers. The results emitted by the mappers are first sorted and then passed to one or more reducers that process and combine the data to return the final result."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Map & reduce](mapreduce.svg \"mapreduce.svg\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "With [Hadoop Streaming](https://hadoop.apache.org/docs/current/hadoop-streaming/HadoopStreaming.html) it is possible to use any programming language to define a mapper and/or a reducer. Here we're going to use the Unix `bash` scripting language ([here](https://www.gnu.org/software/bash/manual/html_node/index.html) is the official documentation for the language)."
    ]
   },
@@ -630,11 +638,20 @@
    "metadata": {},
    "source": [
     "### Shuffling and sorting <a name=\"shuffling&sorting\"></a>\n",
-    "The following picture illustrates the concept of shuffling and sorting that is automatically performed by Hadoop after each map before passing the output to reduce. In the picture the outputs of the two mapper tasks are shown. The arrows represent shuffling and sorting done before delivering the data to one reducer (rightmost box).\n",
-    "<center>\n",
-    "<img style=\"\" src=\"shuffle_sort.svg\" width=\"80%\">\n",
-    "</center>\n",
-    "\n",
+    "The following picture illustrates the concept of shuffling and sorting that is automatically performed by Hadoop after each map before passing the output to reduce. In the picture the outputs of the two mapper tasks are shown. The arrows represent shuffling and sorting done before delivering the data to one reducer (rightmost box)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Shuffle & sort](shuffle_sort.svg \"shuffle_sort.svg\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The shuffling and sorting phase is often one of the most costly in a MapReduce job.\n",
     "\n",
     "\n",
