--- a/mapreduce_with_bash.ipynb
+++ b/mapreduce_with_bash.ipynb
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Map & reduce](mapreduce.svg \"mapreduce.svg\")"
+    "![Map & reduce](./mapreduce.svg \"mapreduce.svg\")"
    ]
   },
   {
@@ -645,7 +645,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Shuffle & sort](shuffle_sort.svg \"shuffle_sort.svg\")"
+    "![Shuffle & sort](/shuffle_sort.svg \"shuffle_sort.svg\")"
    ]
   },
   {
