--- a/mapreduce_with_bash.ipynb
+++ b/mapreduce_with_bash.ipynb
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Map & reduce](./mapreduce.svg \"mapreduce.svg\")"
+    "![Map & reduce](/big_data/mapreduce.svg \"mapreduce.svg\")"
    ]
   },
   {
