--- a/mapreduce_with_bash.ipynb
+++ b/mapreduce_with_bash.ipynb
@@ -645,7 +645,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Shuffle & sort](/shuffle_sort.svg \"shuffle_sort.svg\")"
+    "![Shuffle & sort](shuffle_sort.svg)"
    ]
   },
   {
