--- a/mapreduce_with_bash.ipynb
+++ b/mapreduce_with_bash.ipynb
@@ -16,17 +16,17 @@
    "metadata": {},
    "source": [
     "# Table of contents\n",
-    "1. [What is MapReduce?](#mapreduce)\n",
-    "2. [The mapper](#mapper)\n",
+    "- [What is MapReduce?](#mapreduce)\n",
+    "- [The mapper](#mapper)\n",
     "    - [Test the mapper](#testmapper)\n",
-    "3. [Hadoop it up](#hadoop)\n",
+    "- [Hadoop it up](#hadoop)\n",
     "    - [What is Hadoop Streaming?](#hadoopstreaming)\n",
     "    - [List your Hadoop directory](#hdfs_ls)\n",
     "    - [Test MapReduce with a dummy reducer](#dummyreducer)\n",
     "    - [Shuffling and sorting](#shuffling&sorting)\n",
-    "4. [The reducer](#reducer)\n",
+    "- [The reducer](#reducer)\n",
     "    - [Test and run](#run)\n",
-    "5. [Run a mapreduce job with more data](#moredata)\n",
+    "- [Run a mapreduce job with more data](#moredata)\n",
     "    - [Sort the output with `sort`](#sortoutput)\n",
     "    - [Sort the output with another MapReduce job](#sortoutputMR)\n",
     "    - [Configure sort with `KeyFieldBasedComparator`](#KeyFieldBasedComparator)\n",
