--- a/mapreduce_with_bash.ipynb
+++ b/mapreduce_with_bash.ipynb
@@ -627,7 +627,7 @@
    "source": [
     "### Shuffling and sorting <a name=\"shuffling&sorting\"></a>\n",
     "The following picture illustrates the concept of shuffling and sorting that is automatically performed by Hadoop after each map before passing the output to reduce. In the picture the outputs of the two mapper tasks are shown. The arrows represent shuffling and sorting done before delivering the data to one reducer (rightmost box).\n",
-    "![Shuffle & sort](shuffle_sort.png)"
+    "![Shuffle & sort](shuffle_sort.png)",
     "\n",
     "The shuffling and sorting phase is often one of the most costly in a MapReduce job.\n",
     "\n",
