note about schema

--- a/generate_data_with_Faker.ipynb
+++ b/generate_data_with_Faker.ipynb
@@ -875,6 +875,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note how `location` represents a _tuple_ data structure (a `StructType` of `StructField`s)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
