--- a/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
+++ b/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
@@ -4,7 +4,23 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [],
+      "collapsed_sections": [
+        "oUuQjW2oNMcJ",
+        "qFfOrktMPq8M",
+        "KE7kSYSXQYLf",
+        "lGI4TNXPamMr",
+        "RlgP1ytnRtUK",
+        "KLmxLQeJSb4A",
+        "kXbSKFyeMqr2",
+        "k2-Fdp73cF0V",
+        "V68C4cDySyek",
+        "CKRRbwDFv3ZQ",
+        "G3KBe4R65bl1",
+        "yVJA-3jSATGV",
+        "BbosNo0TD3oH",
+        "Sam22f-YT1xR",
+        "IF6-Z5RotAcO"
+      ],
       "toc_visible": true,
       "authorship_tag": "ABX9TyNfkkxUWUfQZDRXeUzVwLq/",
       "include_colab_link": true
