--- a/PySpark_miscellanea_on_Colab.ipynb
+++ b/PySpark_miscellanea_on_Colab.ipynb
@@ -17,7 +17,7 @@
         "id": "d6244506"
       },
       "source": [
-        "<a href=\"https://github.com/groda/big_data\"><div><img src=\"https://github.com/groda/big_data/blob/master/logo_bdb.png?raw=true\" style=\"display:block;float:right;\" align=right></div></a>\n",
+        "<a href=\"https://github.com/groda/big_data\"><div><img src=\"https://github.com/groda/big_data/blob/master/logo_bdb.png?raw=true\" style=\"display:block;float:right;max-width:90px;\" align=right></div></a>\n",
         "\n",
         "# PySpark miscellanea\n",
         "    \n",
