--- a/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
+++ b/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
@@ -22,7 +22,7 @@
         "IF6-Z5RotAcO"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNiUpfRWeK2sfJCxEfNFWah",
+      "authorship_tag": "ABX9TyMpEVRRBEwifCWVloJvoET+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,11 @@
     {
       "cell_type": "markdown",
       "source": [
+        "<a href=\"https://github.com/groda/big_data\"><div><img src=\"https://github.com/groda/big_data/blob/master/logo_bdb.png?raw=true\" align=right width=\"90\"></div></a>\n",
+        "\n",
         "# HDFS and MapReduce on a single-node Hadoop cluster\n",
+        "<br>\n",
+        "<br>\n",
         "\n",
         "We're going to set up a single-node cluster (following the instructions on https://hadoop.apache.org/docs/stable/hadoop-project-dist/hadoop-common/SingleCluster.html) and show how to run simple HDFS and MapReduce commands.\n",
         "\n",
@@ -103,7 +107,7 @@
         "id": "C7X0EZaMPrsD",
         "outputId": "64714b76-4ee6-4d1a-e734-d599de8700c6"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +137,7 @@
         "id": "lABuOV124G4x",
         "outputId": "6a755628-4087-4b18-c296-2eec6c3dbeb7"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,7 +178,7 @@
         "id": "mCmk5GOqv0Y-",
         "outputId": "2bb3a14a-6db6-4a64-b804-b28a78831871"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,7 +212,7 @@
         "id": "Dd7en2Cv68ce",
         "outputId": "1504c23d-a15d-44fa-d823-acd8a2c350a5"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,7 +242,7 @@
       "metadata": {
         "id": "P88xcreEQBcx"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -265,7 +269,7 @@
         "id": "54LqS5Rkgyli",
         "outputId": "326ea17b-bbb9-452a-de7f-baf63e185c31"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,7 +298,7 @@
       "metadata": {
         "id": "C17WYI0mQRE8"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -329,7 +333,7 @@
         "id": "NhTinHLqCrFQ",
         "outputId": "780f46d2-8031-4d42-8d71-ccf52660e22c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -366,7 +370,7 @@
         "id": "zL302M1OhFMH",
         "outputId": "40102256-b2fc-461a-eb1d-db1cb544f9c8"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,7 +406,7 @@
         "id": "49xx-zSxIdxa",
         "outputId": "364baaec-d8da-4cf6-e37a-e163a1abadda"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -425,7 +429,7 @@
       "metadata": {
         "id": "6V03we10Igek"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -441,7 +445,7 @@
         "id": "Aif21X1ONvwH",
         "outputId": "e838beaa-cb31-4472-b697-aa4ff592ad7d"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -464,7 +468,7 @@
         "id": "GcM-idgZQqfV",
         "outputId": "9f636aac-96fe-4549-93a8-3fc7337b42a3"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -527,7 +531,7 @@
       "metadata": {
         "id": "_n2d2lqXSLU1"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -551,7 +555,7 @@
         "id": "-ISxE4Gqg_LG",
         "outputId": "6d32f5ed-094d-4061-c23f-4fea24fad11e"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -599,7 +603,7 @@
       "metadata": {
         "id": "2_vn-TGyPe9V"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -607,7 +611,7 @@
       "source": [
         "### Setup localhost access via SSH key\n",
         "\n",
-        "We are going to allow passphraseless sccess to `localhost` with a secure key.\n",
+        "We are going to allow passphraseless access to `localhost` with a secure key.\n",
         "\n",
         "SSH must be installed and sshd must be running to use the Hadoop scripts that manage remote Hadoop daemons.\n"
       ],
@@ -619,7 +623,11 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "#### Install `openssh` and start server"
+        "#### Install `openssh` and start server\n",
+        "\n",
+        "I'm not sure why we need the option `StrictHostKeyChecking no`. This option tells the `ssh` server to allow key authentication only from known hosts, in particular it prevents a host from authenticating with key if the key has changed. I guess this option is needed since a new ssh key is generated every time one runs this notebook.\n",
+        "\n",
+        "Alternatively, one could just delete the file `~/.ssh/known_hosts` or else use `ssh-keygen -R hostname` to remove all keys belonging to hostname from the `known_hosts` file (see for instance [How to remove strict RSA key checking in SSH and what's the problem here?](https://serverfault.com/questions/6233/how-to-remove-strict-rsa-key-checking-in-ssh-and-whats-the-problem-here) or [Remove key from known_hosts](https://superuser.com/questions/30087/remove-key-from-known-hosts)). The option `ssh-keygen -R hostname` seems the most elegant and I'm going to try it out some day.\n"
       ],
       "metadata": {
         "id": "-Uxmv3RdUwiF"
@@ -640,7 +648,7 @@
         "id": "yOxz683FNuYH",
         "outputId": "712ca4df-ee3c-4603-ad34-1d28755eeba7"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -664,7 +672,11 @@
       "cell_type": "markdown",
       "source": [
         "#### Generate key\n",
-        "Generate SSH key that does not require a password."
+        "Generate SSH key that does not require a password. \n",
+        "\n",
+        "The private key is contained in the file `id_rsa` located in the folder `~/.ssh`.\n",
+        "\n",
+        "The public key is added to the file `~/.ssh/authorized_keys` in order to allow authentication with that key."
       ],
       "metadata": {
         "id": "PYKoSlaENuyG"
@@ -686,7 +698,7 @@
         "id": "YHOjUaxHSsQD",
         "outputId": "55c44c48-c4c5-4da2-e35a-34f36e9f48d1"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -736,7 +748,7 @@
         "id": "hqIRVxcfce0F",
         "outputId": "ea5bba6e-4078-43d7-cc0a-09f1d6a0a990"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -777,7 +789,7 @@
         "id": "Q-aicnKKLVKQ",
         "outputId": "0216782b-0d88-4373-c3f6-eb48f7cd7fb5"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -801,7 +813,7 @@
       "metadata": {
         "id": "8cb7lXMptVHb"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -825,7 +837,7 @@
         "id": "FXHowFfFEwAF",
         "outputId": "7ca532fb-3470-4048-f6fe-a8bbed20bbd5"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -872,7 +884,7 @@
         "id": "73wuvOJTxX4O",
         "outputId": "c425515c-fff5-40b2-c2a1-052084cf7cc5"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -948,7 +960,7 @@
         },
         "outputId": "842f1ea4-c664-49d2-d193-8e80e5394fd5"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1206,7 +1218,7 @@
         "id": "rB7FXYTbwNzm",
         "outputId": "27712693-f2ce-477f-b4e1-7a7521b16778"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1262,7 +1274,7 @@
         "id": "yJIm4SPZFPxy",
         "outputId": "89aa8848-41a3-46a4-9883-591c43b9bef0"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1288,7 +1300,7 @@
         },
         "outputId": "dc993726-aad0-4d49-9303-5898248426ec"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1330,7 +1342,7 @@
         "id": "4-rraIUdfdj0",
         "outputId": "b9aaf977-3354-43e9-cf70-fbbe5b238882"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1358,7 +1370,7 @@
       "metadata": {
         "id": "QwOk_y7egbGM"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1382,7 +1394,7 @@
         "id": "9qf1dFqIKgoJ",
         "outputId": "e7874aaf-e6bc-4c34-f278-55120c200854"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1423,7 +1435,7 @@
         "id": "TJ0kDRsigCC2",
         "outputId": "1ca9feb5-2a2f-406e-c4b9-7ce9e8e540a8"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1534,7 +1546,7 @@
         "id": "G7SEzMC2OqWW",
         "outputId": "1556a85a-85f1-47c1-97a1-daf7c18397ea"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1681,7 +1693,7 @@
         "id": "RhLA5HZEhfmT",
         "outputId": "e18355ff-40d0-4222-d6c7-cf3d44ba83a0"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1706,7 +1718,7 @@
         "id": "Ffi4RvXnPH14",
         "outputId": "6835c598-8c7f-4385-d315-e1062d980858"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1770,7 +1782,7 @@
         "id": "fMKEqUF1T-v9",
         "outputId": "f40cda49-5389-4ad4-af3f-7c811d567e57"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1798,7 +1810,7 @@
       "metadata": {
         "id": "35DP8K2_WDYO"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1822,7 +1834,7 @@
         "id": "k-R7VNoTVRjL",
         "outputId": "6c270817-7c53-4ab6-a9a0-5a57ccc488f5"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1884,7 +1896,7 @@
         "id": "XwxHJ7yyVR34",
         "outputId": "7604979f-ffc0-425b-9fcb-0e3e9082ff99"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2126,7 +2138,7 @@
         "id": "ET3KCfX1UC2u",
         "outputId": "c228f549-51d6-4745-85b3-6bb05da17743"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2192,7 +2204,7 @@
         "id": "Y8IYl4hAZhZm",
         "outputId": "35967c71-81fd-4321-e566-6872fae446cd"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2262,7 +2274,7 @@
         "id": "IoIYG5NlsIMv",
         "outputId": "93d5f330-b702-44cb-d015-bf6010957a38"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2296,7 +2308,7 @@
         "id": "FUvKMpy6chQ5",
         "outputId": "e6f43e24-fa49-447c-a21f-d866a5296ea7"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2307,6 +2319,39 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Concluding remarks\n",
+        "\n",
+        "We have started a single-node Hadoop cluster and ran some simple HDFS and MapReduce commands. \n",
+        "\n",
+        "Even when running on a single machine, one can benefit from the parallelism provided by multiple virtual cores.\n",
+        "\n",
+        "Hadoop provides also a command-line utility (the CLI MiniCluster) to start and stop a single-node Hadoop cluster \"_without the need to set any environment variables or manage configuration files_\" (https://hadoop.apache.org/docs/stable/hadoop-project-dist/hadoop-common/CLIMiniCluster.html). Alas, I was not able to get the MiniCluster to run due to some uncompatible libraries if I remember correctly. \n",
+        "\n",
+        "If on one hand it would be great to be able to start a Hadoop cluster with a single command, it is interesting to see how the single components of a Hadoop cluster come into play and it helps to learn about the Hadoop architecture.\n",
+        "\n",
+        "If you liked this notebook, check also:\n",
+        " - [Hadoop single-node cluster setup with Python](https://github.com/groda/big_data/blob/master/Hadoop_single_node_cluster_setup_Python.ipynb) similar to this but using Python in place of bash\n",
+        " - [Setting up Spark Standalone on Google Colab](https://github.com/groda/big_data/blob/master/Hadoop_Setting_up_Spark_Standalone_on_Google_Colab.ipynb)\n",
+        " - [Getting to know the Spark Standalone Architecture](https://github.com/groda/big_data/blob/master/Spark_Standalone_Architecture_on_Google_Colab.ipynb)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "w5N7tb0HSbZB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "zUCPJY2fWDRw"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
